Nimbus: Support Java 8
In this version, Substance is replaced by the bundled
Nimbus look and feel (hence the name).